--- a/aud/it_aud9_mvc/it_aud9_mvc/Views/Movies/Index.cshtml
+++ b/aud/it_aud9_mvc/it_aud9_mvc/Views/Movies/Index.cshtml
@@ -46,7 +46,7 @@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    <btn data-movie-id="@item.Id" class="btn btn-link js-delete">Delete</btn>
                 </td>
             </tr>
         }
@@ -56,8 +56,25 @@
 @section scripts{
     <script>
         $(document).ready(function () {
-            $("#moviesTable").DataTable();
-
+            var table = $("#moviesTable").DataTable();
+            $("#moviesTable .js-delete").on("click", function () {
+                var button = $(this);
+                bootbox.confirm("Are you sure you want to delete this movie?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/Movies/Delete/" + button.attr("data-movie-id"),
+                            method: "GET",
+                            success: function () {
+                                table.row(button.parents("tr")).remove().draw();
+                            },
+                            error: function (err) {
+                                console.log(err);
+                            }
+                        });
+                    }
+                })
+            })            
         })
+
     </script>
     }
