--- a/labs/it_lab4_mvc/it_lab4_mvc/Views/Friends/Index.cshtml
+++ b/labs/it_lab4_mvc/it_lab4_mvc/Views/Friends/Index.cshtml
@@ -33,9 +33,15 @@
                     @Html.DisplayFor(modelItem => item.MestoZhiveenje)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                    <button data-friend-id="@item.id" class="btn btn-link js-delete">Delete</button>
+                    @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.id })
+                    }
+                    | @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                    @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
+                    {
+                        <button data-friend-id="@item.id" class="btn btn-link js-delete">Delete</button>
+                    }
                 </td>
             </tr>
         }
@@ -68,5 +74,6 @@
         })
 
     </script>
-    
-    }
+
+}
+
